# bible_reader

./: Cargo.toml  README.md
local_crates/egui-0.33.3/src/widgets/text_edit/: builder.rs
src/: main.rs  note_app.rs  notes.rs  theme.rs  utils.rs
