[package]
name = "bible_reader"
version = "0.2.0"
edition = "2024"

[dependencies]
eframe = "0.33"
egui = "0.33"
dirs = "6.0"
rusqlite = { version = "0.29", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
