[package]
name = "bible_reader"
version = "0.3.2"
edition = "2024"

[dependencies]
eframe = { version = "0.28", features = ["wgpu"] }
egui = "0.28"
dirs = "6.0"
rusqlite = { version = "0.29", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

